--- a/axon_client/src/app/globals.css
+++ b/axon_client/src/app/globals.css
@@ -2,335 +2,156 @@
 @tailwind components;
 @tailwind utilities;
 
-
-
-
 @layer base {
-  :root {
-    --background: 0 0% 100%;
-    --foreground: 240 10% 3.9%;
-    --card: 0 0% 100%;
-    --card-foreground: 240 10% 3.9%;
-    --popover: 0 0% 100%;
-    --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
-    --muted: 240 4.8% 95.9%;
-    --muted-foreground: 240 3.8% 46.1%;
-    --accent: 240 4.8% 95.9%;
-    --accent-foreground: 240 5.9% 10%;
-    --destructive: 0 84.2% 60.2%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 5.9% 90%;
-    --input: 240 5.9% 90%;
-    --ring: 240 10% 3.9%;
-    --radius: 0.5rem;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
-  }
+	:root {
+		--background: 0 0% 100%;
+		--foreground: 240 10% 3.9%;
+		--card: 0 0% 100%;
+		--card-foreground: 240 10% 3.9%;
+		--popover: 0 0% 100%;
+		--popover-foreground: 240 10% 3.9%;
+		--primary: 240 5.9% 10%;
+		--primary-foreground: 0 0% 98%;
+		--secondary: 240 4.8% 95.9%;
+		--secondary-foreground: 240 5.9% 10%;
+		--muted: 240 4.8% 95.9%;
+		--muted-foreground: 240 3.8% 46.1%;
+		--accent: 240 4.8% 95.9%;
+		--accent-foreground: 240 5.9% 10%;
+		--destructive: 0 84.2% 60.2%;
+		--destructive-foreground: 0 0% 98%;
+		--border: 240 5.9% 90%;
+		--input: 240 5.9% 90%;
+		--ring: 240 10% 3.9%;
+		--radius: 0.5rem;
+		--chart-1: 12 76% 61%;
+		--chart-2: 173 58% 39%;
+		--chart-3: 197 37% 24%;
+		--chart-4: 43 74% 66%;
+		--chart-5: 27 87% 67%;
+	}
 
-  .dark {
-    --background: 240 10% 3.9%;
-    --foreground: 0 0% 98%;
-    --card: 240 10% 3.9%;
-    --card-foreground: 0 0% 98%;
-    --popover: 240 10% 3.9%;
-    --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
-    --muted: 240 3.7% 15.9%;
-    --muted-foreground: 240 5% 64.9%;
-    --accent: 240 3.7% 15.9%;
-    --accent-foreground: 0 0% 98%;
-    --destructive: 0 62.8% 30.6%;
-    --destructive-foreground: 0 0% 98%;
-    --border: 240 3.7% 15.9%;
-    --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
-  }
+	.dark {
+		--background: 240 10% 3.9%;
+		--foreground: 0 0% 98%;
+		--card: 240 10% 3.9%;
+		--card-foreground: 0 0% 98%;
+		--popover: 240 10% 3.9%;
+		--popover-foreground: 0 0% 98%;
+		--primary: 0 0% 98%;
+		--primary-foreground: 240 5.9% 10%;
+		--secondary: 240 3.7% 15.9%;
+		--secondary-foreground: 0 0% 98%;
+		--muted: 240 3.7% 15.9%;
+		--muted-foreground: 240 5% 64.9%;
+		--accent: 240 3.7% 15.9%;
+		--accent-foreground: 0 0% 98%;
+		--destructive: 0 62.8% 30.6%;
+		--destructive-foreground: 0 0% 98%;
+		--border: 240 3.7% 15.9%;
+		--input: 240 3.7% 15.9%;
+		--ring: 240 4.9% 83.9%;
+		--chart-1: 220 70% 50%;
+		--chart-2: 160 60% 45%;
+		--chart-3: 30 80% 55%;
+		--chart-4: 280 65% 60%;
+		--chart-5: 340 75% 55%;
+	}
 }
-.shadow_topBar--text{
-  text-shadow: 0px 0px 20px #ffffff49;
+.shadow_topBar--text {
+	text-shadow: 0px 0px 20px #ffffff49;
 }
 
 .shadow_topBar--box {
-  box-shadow: 0px 0px 20px #ffffff1f;
-
+	box-shadow: 0px 0px 20px #ffffff1f;
 }
 
-/* 
-
-.ce-toolbar__settings-btn {
-  color: #353535;
-}
-.ce-toolbar__plus{
-  color: #353535;
-}
-
-.ce-toolbar__plus:hover {
-  color: rgb(255, 255, 255);
-  background-color: rgb(32, 32, 32);
-}
-
-.ce-toolbar__settings-btn:hover {
-  color: rgb(255, 255, 255);
-  background-color: rgb(32, 32, 32);
-}
-
-.ct:after, .ct:before{
-  background-color: #171717;
-}
-
-
-
-body {
-  color: var(--foreground);
-  background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-/* Custom scrollbar styles for dark theme
 ::-webkit-scrollbar {
-  width: 8px;  
-}
-
-::-webkit-scrollbar-track {
-  background: #1e1e2d;  
+	width: 5px;
+	background-color: #171717;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: #3a3a4d; 
-  border-radius: 10px;       
-  border: 2px solid #1e1e2d; 
-}
-
-::-webkit-scrollbar-thumb:hover {
-  background-color: #5a5a6d;  
-}
-
-
-
-.ce-block__content {
-
-    p,
-    ce-paragraph {
-        @apply tracking-wider text-[12px] text-gray-500;
-    }
-
-    h1 {
-        @apply text-[32px] leading-5 font-extrabold;
-    }
-
-    h2 {
-        @apply text-[24px] leading-5 font-bold;
-    }
-
-    h3 {
-        @apply text-[18px] leading-5 font-bold;
-    }
-
-    h4 {
-        @apply text-[16px] leading-5 font-semibold;
-    }
-
-    h5 {
-        @apply text-[14px] leading-5 font-semibold;
-    }
-
-    h6 {
-        @apply text-[14px] leading-5 font-semibold;
-    }
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
-}
-
-.ce-popover-item__icon.ce-popover-item__icon--chevron-right svg{
-  color: white !important;
-}
-.ce-popover-item__icon.ce-popover-item__icon--chevron-left svg{
-  color: white !important;
-}
-.ce-popover-item__icon.ce-popover-item__icon--chevron-top svg{
-  color: white !important;
-}
-
-.ce-popover-item__icon.ce-popover-item__icon--chevron-bottom svg{
-  color: white !important;
-}
-
-
-
-
-.cdx-block {
-  padding: 2px 0px;
-  line-height: 140% !important;
-}
-
-.ce-popover__container{
-  background-color: #171717;
-  color: white !important;
-  border: 0px !important;
-}
-
-.ce-block--selected .ce-block__content{
-  background-color: #171717;
-
-}
-
-    .ce-block__content,
-    .ce-toolbar__content {
-        max-width: unset;
-    }
-
-.ce-popover-item__icon .ce-popover-item__icon--tool{
- background-color: #171717;
-  color: white !important;
-  border: 0px !important; 
-}
-
-.ce-inline-tool-input--showed{
-
-  background-color: #1f1f1f;
-  color: white;
-}
-.ce-inline-tool-input--showed:hover {
-
-  background-color: #1f1f1f !important;
-}
-
-.codex-editor ::selection{
- background-color: rgb(54, 54, 54);
-}
-.ce-popover-item__icon--tool svg{
-  color: white;
-}
-
-.ce-inline-tool{
-  color: white !important;
-}
-
-.ce-inline-tool:hover {
-  background-color: #1f1f1f !important;
-}
-
-.ce-popover-item--active{
- background-color: rgb(54, 54, 54) !important; 
-}
-
-.ce-popover-item__title{
-  color: white;
-}
-
-.cdx-search-field__icon svg{
-  color: white;
-}
-.cdx-search-field__input{
-  background-color: #1f1f1f;
-}
-
-.cdx-search-field .ce-popover__search{
-
-  background-color: #1f1f1f;
-}
-.cdx-search-field {
-  background-color: #1f1f1f;
-}
-
-.ce-popover-item:hover:not(.ce-popover-item--no-hover){
-  background-color: #1f1f1f;
-} */
-
-
-::-webkit-scrollbar{
-  width: 5px;
-  background-color: #171717;
-}
-
-
-::-webkit-scrollbar-thumb {
-  background-color: #3a3a3a;
-  border-radius: 20px;
+	background-color: #3a3a3a;
+	border-radius: 20px;
 }
 
 pre {
-  background: #1d1d1d !important; 
-  border-radius: 0.5rem;
-  color: #fff;
-  font-family: "JetBrainsMono", monospace;
-  padding: 0.75rem 1rem;
-  border: none !important;
-  code {
-    background: black;
-    color: inherit;
-    font-size: 0.8rem;
-    padding: 0;
-  }
+	background: #1d1d1d !important;
+	border-radius: 0.5rem;
+	color: #fff;
+	font-family: "JetBrainsMono", monospace;
+	padding: 0.75rem 1rem;
+	border: none !important;
+	code {
+		background: black;
+		color: inherit;
+		font-size: 0.8rem;
+		padding: 0;
+	}
 
-  .hljs-comment,
-  .hljs-quote {
-    color: #616161;
-  }
+	.hljs-comment,
+	.hljs-quote {
+		color: #616161;
+	}
 
-  .hljs-variable,
-  .hljs-template-variable,
-  .hljs-attribute,
-  .hljs-tag,
-  .hljs-name,
-  .hljs-regexp,
-  .hljs-link,
-  .hljs-name,
-  .hljs-selector-id,
-  .hljs-selector-class {
-    color: #f98181;
-  }
+	.hljs-variable,
+	.hljs-template-variable,
+	.hljs-attribute,
+	.hljs-tag,
+	.hljs-name,
+	.hljs-regexp,
+	.hljs-link,
+	.hljs-name,
+	.hljs-selector-id,
+	.hljs-selector-class {
+		color: #f98181;
+	}
 
-  .hljs-number,
-  .hljs-meta,
-  .hljs-built_in,
-  .hljs-builtin-name,
-  .hljs-literal,
-  .hljs-type,
-  .hljs-params {
-    color: #fbbc88;
-  }
+	.hljs-number,
+	.hljs-meta,
+	.hljs-built_in,
+	.hljs-builtin-name,
+	.hljs-literal,
+	.hljs-type,
+	.hljs-params {
+		color: #fbbc88;
+	}
 
-  .hljs-string,
-  .hljs-symbol,
-  .hljs-bullet {
-    color: #b9f18d;
-  }
+	.hljs-string,
+	.hljs-symbol,
+	.hljs-bullet {
+		color: #b9f18d;
+	}
 
-  .hljs-title,
-  .hljs-section {
-    color: #faf594;
-  }
+	.hljs-title,
+	.hljs-section {
+		color: #faf594;
+	}
 
-  .hljs-keyword,
-  .hljs-selector-tag {
-    color: #70cff8;
-  }
+	.hljs-keyword,
+	.hljs-selector-tag {
+		color: #70cff8;
+	}
 
-  .hljs-emphasis {
-    font-style: italic;
-  }
+	.hljs-emphasis {
+		font-style: italic;
+	}
 
-  .hljs-strong {
-    font-weight: 700;
-  }
+	.hljs-strong {
+		font-weight: 700;
+	}
+}
+
+.parent_backdrop--blur {
+	position: relative;
+}
+
+.parent_backdrop--blur::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	border-radius: 0.75rem;
+	backdrop-filter: blur(50px);
+	z-index: -1;
 }
