--- a/axon_client/src/app/globals.css
+++ b/axon_client/src/app/globals.css
@@ -63,6 +63,10 @@
 	text-shadow: 0px 0px 20px #ffffff49;
 }
 
+.text_glow {
+	text-shadow: 0px 0px 20px #ffffff21;
+}
+
 .shadow_topBar--box {
 	box-shadow: 0px 0px 20px #ffffff1f;
 }
@@ -143,7 +147,6 @@ pre {
 		font-weight: 700;
 	}
 }
-
 
 .parent_backdrop--blur::before {
 	content: "";
