--- a/axon_client/src/app/globals.css
+++ b/axon_client/src/app/globals.css
@@ -156,3 +156,131 @@ pre {
 	backdrop-filter: blur(50px);
 	z-index: -1;
 }
+
+.workspace-top-bar::before {
+	content: "";
+	position: absolute;
+	inset: 0;
+	backdrop-filter: blur(9px);
+	z-index: -1;
+}
+
+.prose
+	:where(code):not(
+		:where([class~="not-prose"], [class~="not-prose"] *)
+	)::before,
+.prose
+	:where(code):not(
+		:where([class~="not-prose"], [class~="not-prose"] *)
+	)::after {
+	content: "";
+}
+
+.width-transition {
+	transition: 0.4s all cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.custom-transition-all {
+	transition: 0.4s all cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.custom-transition-all-150 {
+	transition: 0.4s all cubic-bezier(0.76, 0, 0.24, 1);
+}
+
+.gradient-blur {
+	position: absolute;
+	z-index: 5;
+	inset: auto 0 0 0;
+	height: 100%;
+	pointer-events: none;
+}
+.gradient-blur > div,
+.gradient-blur::before,
+.gradient-blur::after {
+	position: absolute;
+	inset: 0;
+}
+.gradient-blur::before {
+	content: "";
+	z-index: 1;
+	backdrop-filter: blur(0.5px);
+	mask: linear-gradient(
+		to bottom,
+		rgba(0, 0, 0, 0) 0%,
+		rgba(0, 0, 0, 1) 12.5%,
+		rgba(0, 0, 0, 1) 25%,
+		rgba(0, 0, 0, 0) 37.5%
+	);
+}
+.gradient-blur > div:nth-of-type(1) {
+	z-index: 2;
+	backdrop-filter: blur(1px);
+	mask: linear-gradient(
+		to top,
+		rgba(0, 0, 0, 0) 12.5%,
+		rgba(0, 0, 0, 1) 25%,
+		rgba(0, 0, 0, 1) 37.5%,
+		rgba(0, 0, 0, 0) 50%
+	);
+}
+.gradient-blur > div:nth-of-type(2) {
+	z-index: 3;
+	backdrop-filter: blur(1px);
+	mask: linear-gradient(
+		to top,
+		rgba(0, 0, 0, 0) 25%,
+		rgba(0, 0, 0, 1) 37.5%,
+		rgba(0, 0, 0, 1) 50%,
+		rgba(0, 0, 0, 0) 62.5%
+	);
+}
+.gradient-blur > div:nth-of-type(3) {
+	z-index: 4;
+	backdrop-filter: blur(3px);
+	mask: linear-gradient(
+		to top,
+		rgba(0, 0, 0, 0) 37.5%,
+		rgba(0, 0, 0, 1) 50%,
+		rgba(0, 0, 0, 1) 62.5%,
+		rgba(0, 0, 0, 0) 75%
+	);
+}
+.gradient-blur > div:nth-of-type(4) {
+	z-index: 5;
+	backdrop-filter: blur(5px);
+	mask: linear-gradient(
+		to top,
+		rgba(0, 0, 0, 0) 50%,
+		rgba(0, 0, 0, 1) 62.5%,
+		rgba(0, 0, 0, 1) 75%,
+		rgba(0, 0, 0, 0) 87.5%
+	);
+}
+.gradient-blur > div:nth-of-type(5) {
+	z-index: 6;
+	backdrop-filter: blur(10px);
+	mask: linear-gradient(
+		to top,
+		rgba(0, 0, 0, 0) 62.5%,
+		rgba(0, 0, 0, 1) 75%,
+		rgba(0, 0, 0, 1) 87.5%,
+		rgba(0, 0, 0, 0) 100%
+	);
+}
+.gradient-blur > div:nth-of-type(6) {
+	z-index: 7;
+	backdrop-filter: blur(20px);
+	mask: linear-gradient(
+		to top,
+		rgba(0, 0, 0, 0) 75%,
+		rgba(0, 0, 0, 1) 87.5%,
+		rgba(0, 0, 0, 1) 100%
+	);
+}
+.gradient-blur::after {
+	content: "";
+	z-index: 8;
+	backdrop-filter: blur(30px);
+	mask: linear-gradient(to top, rgba(0, 0, 0, 0) 87.5%, rgba(0, 0, 0, 1) 100%);
+}
